--- a/src/main/resources/META-INF/native-image/resource-config.json
+++ b/src/main/resources/META-INF/native-image/resource-config.json
@@ -1,9 +1,6 @@
 {
     "resources": {
-      "includes": [
-        {"pattern": ".*.xml$"},
-        {"pattern": ".*.xsd$"}
-      ],
+      "includes": [],
       "excludes": []
     }
 }
